--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,26 +1,35 @@
-.button{
-    Width:66px;
-    Height:48px;
-    Top:13px;
-    Left:938px;
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    height:48px;
+}
+
+.searchButton{
+    /* Width:66px; */
+    Height:100%;
+    cursor: pointer;
+    border-left: none;
+    padding: 14px, 20px;
     border-radius:0px 8px 8px 0px;
     Border:1px solid var(--color-black);
-    background-color: var(--color-primary);
-    color:var(--color-black);
+   
     
     
 }
 
-.inputBox{
-    Width:502px;
-    Height:48px;
-    Top:13px;
-    Left:436px;
-    border-radius:8px 0px 0px 8px;
-    Border:1px solid var(--color-black);
-    background-color: var(--color-white);
-    color:var(--color-black);
+.search{
    
+    padding: 14px 20px;
+    border-radius:8px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;    
+    Border:1px solid var(--color-black);
+    Width:502px;
+    Height:100%;
+    /* background-color: var(--color-white);
+    color:var(--color-black);
+    */
 
 }
 
